cmake_minimum_required(VERSION 3.10)    

project(projects)

add_subdirectory(hiz)
add_subdirectory(sandbox)
add_subdirectory(bvh_my)
add_subdirectory(asset_pack_cli)
add_subdirectory(compute)
add_subdirectory(test)
# add_subdirectory(test2)
# add_subdirectory(test3)
# add_subdirectory(test4)
# add_subdirectory(windowing)
# add_subdirectory(raytracing)
# add_subdirectory(hybrid)
# add_subdirectory(x11_test)